compile with Java 18